# otsubsetinverse

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Dockerfile  README.rst
.github/workflows/: build.yml
cmake/: OTSubsetInverseConfig.cmake.in  UseOTSubsetInverse.cmake
distro/debian/: changelog  control  rules
distro/rpm/: otsubsetinverse.spec
distro/windows/: Makefile  README.txt  installer.nsi
docker/linux/: dockerfile  dockerfile_linux
docker/mingw/: dockerfile_mingw  run_docker_build.sh
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt
lib/src/: CMakeLists.txt  SubsetInverseSampling.cxx  SubsetInverseSamplingResult.cxx  SubsetSampling.cxx  SubsetSamplingResult.cxx
lib/src/otsubsetinverse/: SubsetInverseSampling.hxx  SubsetInverseSamplingResult.hxx  SubsetSampling.hxx  SubsetSamplingResult.hxx
lib/test/: CMakeLists.txt  t_SubsetInverseSampling_std.cxx  t_SubsetInverseSampling_std.expout  t_SubsetSampling_std.cxx  t_SubsetSampling_std.expout
python/doc/: conf.py.in  index.rst
python/src/: CMakeLists.txt  METADATA.in  SubsetInverseSampling.i  SubsetInverseSamplingResult.i  SubsetInverseSampling_doc.i.in  SubsetSampling.i  SubsetSamplingResult.i  SubsetSampling_doc.i.in  __init__.py  otsubsetinverse_module.i
python/test/: CMakeLists.txt  t_SubsetInverseSampling_R-S.expout  t_SubsetInverseSampling_R-S.py  t_SubsetInverseSampling_Waarts_system_series.expout  t_SubsetInverseSampling_Waarts_system_series.py  t_SubsetSampling_R-S.py  t_SubsetSampling_Waarts_system_series.py
recipe/: build.sh  meta.yaml
(+5 files in other folders)
